--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
 		/>
 		<!-- customized styles link -->
-		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="stylesheet" href="/stylesheets/styles.css" />
 
 		<!-- Bootstrap scripts -->
 		<script
@@ -36,12 +36,18 @@
 			src="https://kit.fontawesome.com/bf5071f3ea.js"
 			crossorigin="anonymous"
 		></script>
-
+		<!-- Mapbox Gl javascript code -->
+		<script src="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
+		<!-- Mapbox Gl css code -->
+		<link
+			href="https://api.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css"
+			rel="stylesheet"
+		/>
 		<title>Rise and Optimize</title>
 	</head>
-	<body>
+	<body style="margin: 0; padding: 0">
 		<!-- Nav Bar -->
-		<div class="container-fluid">
+		<div class="container-fluid" style="padding-left: 0; padding-right: 0">
 			<div class="navbar navbar-expand-lg navbar-dark bg-dark">
 				<a class="navbar-brand" style="cursor: default">
 					<button
@@ -82,7 +88,7 @@
 			</div>
 		</div>
 		<nav class="d-flex align-items-start preview-container">
-			<div class="left-nav">
+			<div class="left-nav" style="position: fixed; background-color: #212529">
 				<ul
 					class="nav flex-column nav-pills bg-dark"
 					id="pills-tab"
@@ -165,12 +171,16 @@
 					role="tabpanel"
 					aria-labelledby="pills-map1-tab"
 				>
-					<!-- <img
-						src="assests/mapDummy.PNG"
-						alt="map1"
-						class="map-img"
-						usemap="#map1"
-					/> -->map 1
+					<div
+						id="map"
+						style="
+							position: absolute;
+							top: 0;
+							bottom: 0;
+							width: 100%;
+							z-index: -1;
+						"
+					></div>
 				</div>
 				<div
 					class="tab-pane fade"
@@ -198,15 +208,69 @@
 				</div>
 			</div>
 		</nav>
-		<!-- <map name="map1">
-			<area
-				shape="poly"
-				coords="388,154,381,155,375,160,370,166,369,173,370,180,375,186,381,191,388,192,395,191,401,186,406,180,407,173,406,166,401,160,395,155"
-				href="javascript:alert('This is Lebanon');"
-			/>
-		</map> -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script>
+			mapboxgl.accessToken =
+				"pk.eyJ1IjoiYWxpLWFnaCIsImEiOiJja3U0OWJlNW4weDgwMzFvNmhsY2dhMWZ0In0._9bFwcY83fo_G3G2EuI8xw";
+			const map = new mapboxgl.Map({
+				style: "mapbox://styles/mapbox/light-v10",
+				center: [-73.935242, 40.73061],
+				zoom: 15.5,
+				pitch: 45,
+				bearing: -17.6,
+				container: "map",
+				antialias: true,
+			});
+			map.addControl(new mapboxgl.NavigationControl());
+			map.on("load", () => {
+				// Insert the layer beneath any symbol layer.
+				const layers = map.getStyle().layers;
+				const labelLayerId = layers.find(
+					(layer) => layer.type === "symbol" && layer.layout["text-field"]
+				).id;
 
-		<script src="js/index.js" charset="UTF-8"></script>
+				// The 'building' layer in the Mapbox Streets
+				// vector tileset contains building height data
+				// from OpenStreetMap.
+				map.addLayer(
+					{
+						id: "add-3d-buildings",
+						source: "composite",
+						"source-layer": "building",
+						filter: ["==", "extrude", "true"],
+						type: "fill-extrusion",
+						minzoom: 15,
+						paint: {
+							"fill-extrusion-color": "#aaa",
+
+							// Use an 'interpolate' expression to
+							// add a smooth transition effect to
+							// the buildings as the user zooms in.
+							"fill-extrusion-height": [
+								"interpolate",
+								["linear"],
+								["zoom"],
+								15,
+								0,
+								15.05,
+								["get", "height"],
+							],
+							"fill-extrusion-base": [
+								"interpolate",
+								["linear"],
+								["zoom"],
+								15,
+								0,
+								15.05,
+								["get", "min_height"],
+							],
+							"fill-extrusion-opacity": 0.6,
+						},
+					},
+					labelLayerId
+				);
+			});
+		</script>
+		<script src="/javascripts/index.js" charset="UTF-8"></script>
 	</body>
 </html>
