--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -9,6 +9,7 @@ body {
 .left-nav {
 	height: 100%;
 	padding: 25px;
+	opacity: 0;
 	display: none;
 }
 .map-img {
@@ -23,4 +24,20 @@ body {
 	width: 0;
 	margin-right: 0;
 	margin-left: auto;
+}
+.geocoder {
+	position: absolute;
+	z-index: 1;
+	width: 50%;
+	left: 50%;
+	margin-left: -25%;
+	top: 25px;
+}
+.mapboxgl-ctrl-geocoder {
+	min-width: 100%;
+}
+@media (max-width: 682px) {
+	.NASA-img {
+		display: none;
+	}
 }
