--- a/views/geojson.html
+++ b/views/geojson.html
@@ -4,18 +4,95 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Bootstrap styles cdn link -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<!-- Bootstrap icons -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+		/>
+		<!-- customized styles link -->
+		<link rel="stylesheet" href="/stylesheets/styles.css" />
+
+		<!-- Bootstrap scripts -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+			integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+			integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+			crossorigin="anonymous"
+		></script>
+		<!-- Font Awesome -->
+
+		<script
+			src="https://kit.fontawesome.com/bf5071f3ea.js"
+			crossorigin="anonymous"
+		></script>
 		<title>geojson File Upload</title>
 	</head>
 	<body>
-		<h1>geojson file Upload</h1>
-		<form action="/upload" method="POST" enctype="multipart/form-data">
+		<!-- Nav Bar -->
+		<div class="container-fluid">
+			<div class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<a class="navbar-brand" href="/">
+					<img
+						src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/NASA_logo.svg/2449px-NASA_logo.svg.png"
+						alt="NASA-logo"
+						style="height: 50px; width: auto"
+						class="NASA-img"
+					/>
+					<span class="NASA-img">NASA</span></a
+				>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarTogglerDemo01"
+					aria-controls="navbarTogglerDemo01"
+					aria-expanded="false"
+					aria-label="Toggle navigation"
+				>
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="/upload">upload</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<h1 style="padding: 20px">geojson file Upload</h1>
+		<form
+			action="/upload"
+			method="POST"
+			enctype="multipart/form-data"
+			style="padding: 5px 20px"
+		>
 			<input
 				type="file"
 				name="geojsonFile"
 				id="geojsonfile"
 				onchange="return fileValidation()"
+				class="form-control"
 			/>
-			<button type="submit" value="Upload">Submit</button>
+			<button
+				type="submit"
+				value="Upload"
+				class="btn btn-light"
+				style="margin-top: 20px"
+			>
+				Submit
+			</button>
 		</form>
 		<script>
 			function fileValidation() {
