change the logo

--- a/views/geojson.html
+++ b/views/geojson.html
@@ -42,14 +42,14 @@
 		<!-- Nav Bar -->
 		<div class="container-fluid">
 			<div class="navbar navbar-expand-lg navbar-dark bg-dark">
-				<a class="navbar-brand" href="/">
-					<img
-						src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/NASA_logo.svg/2449px-NASA_logo.svg.png"
+				<a href="/" class="navbar-brand"
+					><img
+						src="/images/planet.svg"
 						alt="NASA-logo"
-						style="height: 50px; width: auto"
+						style="height: 50px; width: auto; color: #fefbf3"
 						class="NASA-img"
 					/>
-					<span class="NASA-img">NASA</span></a
+					<span class="NASA-img">UDAT</span></a
 				>
 				<button
 					class="navbar-toggler"
