--- a/views/index.html
+++ b/views/index.html
@@ -70,12 +70,12 @@
 						<i class="bi bi-list"></i></button
 					><a href="/" class="navbar-brand"
 						><img
-							src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e5/NASA_logo.svg/2449px-NASA_logo.svg.png"
+							src="/images/planet.svg"
 							alt="NASA-logo"
-							style="height: 50px; width: auto"
+							style="height: 50px; width: auto; color: #fefbf3"
 							class="NASA-img"
 						/>
-						<span class="NASA-img">NASA</span></a
+						<span class="NASA-img">UDAT</span></a
 					></a
 				>
 				<button
